      script.
  * cmd/hockeypuck/run.go, hkp/templates.go,
    openpgp/index.go, === removed directory
    instroot/var/lib/hockeypuck/www/templates, router.go:
    - Moved templates into string constants. Make webroot optional for
      CSS and fonts, but not essential to running the service.
  * instroot/usr/share/man/man1/hockeypuck.1:
    - Update man page to match new subcommand CLI.

 -- Casey Marshall <cmars@cmarstech.com>  Fri, 04 Oct 2013 15:15:24 -0500

hockeypuck (1.0~b2) raring; urgency=low

  [ Casey Marshall ]
  * Opening 1.0~b1 development and a bottle of
    Maker's. SKS reconciliation now working in
    the small. Cheers!
  * cmd/sks-hash/main.go, instroot/etc/hockeypuck/hockeypuck.conf,
    openpgp/recon.go, openpgp/responses.go, openpgp/validate.go,
    openpgp/worker.go:
    - Add commented-out SKS recon configuration stanza.
    - Check errors in prefix tree insert/remove.
    - Fixed Worker.LookupKey to correctly return error.
    - go fmt
  * cmd/hockeypuck-load/main.go:
    - Add -drop and -take command line arguments to help
      create synchronization test cases.
  * **/*.go, openpgp/doc.go:
    - Add/fix package godoc comments. LP: #1117274
    - Update debug utility commands wrt openpgp changes.
  * === removed directory cmd/lspgp, === removed directory cmd/pqtest:
    - Removed unused 'spike' debug utilities, no longer useful. 
  * openpgp/recon.go:
    - Fix deadlock when adding keys from SKS recon.
  * debian/mkdists:
    - Packaging script should fail on error.
  * openpgp/recon.go:
    - Add previously missing elements to prefix tree.
  * hkp/requests.go, openpgp/add.go, openpgp/io.go, openpgp/recon.go,
    openpgp/responses.go, openpgp/schema.go, openpgp/types.go,
    openpgp/worker.go:
    - Add fallback to track unsupported keys discovered through
      gossip. LP: #1208290
    - Initialize current digests in KeyChange for defined behavior in
      change consumers.
  * cmd/hockeypuck-load/main.go, openpgp/recon.go: